--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="input-container">
             <div class="input-wrapper">
                 <select id="language-select">
-                    <option value="javascript">JavaScript</option>
+<!--                     <option value="javascript">JavaScript</option>
                     <option value="python">Python</option>
                     <option value="java">Java</option>
-                    <option value="cpp">C++</option>
+                    <option value="cpp">C++</option> -->
                 </select>
                 <textarea 
                     id="prompt-input" 
